# libkolibre-clientcore

./: Makefile.am  README  README.md  configure.ac  doxygen.cfg  doxygen.cfg.in  libkolibre-clientcore.pc.in
doc/: Navi_class.dia  Navi_sequence.dia  class-inheritance.dia  jump-command-flow-example.dia  libkolibre-modules-dependencies.dia  push-command-flow-example.dia
prompts/: messages.csv  prompthelper.sh  prompts.csv
prompts/en/: translations.csv
prompts/fi/: translations.csv
prompts/hr/: translations.csv
prompts/sv/: translations.csv
samples/: Makefile.am  README
samples/client/: Input.cpp  Input.h  Main.cpp  Makefile.am  config.ini  kolibre_prefix.sh.in  log4cxx.conf  run.sh
src/: ClientCore.cpp  ClientCore.h  DaisyBookNode.cpp  DaisyBookNode.h  DaisyNavi.cpp  DaisyNavi.h  DaisyOnlineBookNode.cpp  DaisyOnlineBookNode.h  DaisyOnlineNode.cpp  DaisyOnlineNode.h  Defines.h  FileSystemNode.cpp  FileSystemNode.h  MP3FileNode.cpp  MP3FileNode.h  MP3Node.cpp  MP3Node.h  Makefile.am  MediaSourceManager.cpp  MediaSourceManager.h  Navi.cpp  Navi.h  NaviList.h  NaviListImpl.cpp  NaviListImpl.h  NaviListItem.h  RootNode.cpp  RootNode.h  Utils.h  version.h.in
src/CommandQueue2/: CommandQueue.h  ScopeLock.h
src/Commands/: InternalCommands.h  JumpCommand.h  NotifyCommands.h
src/Menu/: AutoPlayNode.cpp  AutoPlayNode.h  BookInfoNode.cpp  BookInfoNode.h  ContextMenuNode.cpp  ContextMenuNode.h  GotoPageNode.cpp  GotoPageNode.h  GotoPercentNode.cpp  GotoPercentNode.h  GotoTimeNode.cpp  GotoTimeNode.h  NarratedNode.cpp  NarratedNode.h  SleepTimerNode.cpp  SleepTimerNode.h  TempoNode.cpp  TempoNode.h  VirtualContextMenuNode.cpp  VirtualContextMenuNode.h
src/Settings/: Db.cpp  Db.h  Makefile.am  Settings.cpp  Settings.h
tests/: Makefile.am  fakesoapserver.py  setup_logging.h  soaptester.sh
tests/commandqueue2/: Makefile.am  flush_test.cpp  threads_test.cpp
tests/interface/: Makefile.am  getset.cpp  mediasourcemanager.cpp  sleeptimer.cpp
tests/nodes/: Makefile.am  daisybooknode.cpp  daisybooknode.sh  daisynavi.cpp  daisynavi.sh  daisyonlinebooknode.cpp  daisyonlinebooknode.sh  daisyonlinenode.cpp  daisyonlinenode.sh  filesystemnode.cpp  rootnode.cpp
tests/nodes/daisyNavi/FireSafety/: dtb_0001.smil  dtb_0003.smil  dtb_0007.smil  dtb_0010.smil  dtb_0012.smil  dtb_0013.smil  dtb_0014.smil  dtb_0016.smil  dtb_0020.smil  dtb_0021.smil  dtb_0023.smil  dtb_0025.smil  dtb_0027.smil  dtb_0028.smil  dtb_0029.smil  dtb_0031.smil  dtb_0033.smil  dtb_0034.smil  dtb_0035.smil  dtb_0036.smil  dtb_0037.smil  dtb_0039.smil  dtb_0041.smil  dtb_0042.smil  dtb_0043.smil  dtb_0045.smil  dtb_0047.smil  dtb_0048.smil  dtb_0049.smil  dtb_0051.smil  er_book_info.xml  fire_safety.html
tests/nodes/daisyOnlineBookNode/: 1_getContentResources  2_getContentResources
tests/nodes/daisyOnlineNode/: 10_getContentList  11_getContentMetadata  13_getContentMetadata  15_getContentList
tests/nodes/testdata/FireSafety/: dtb_0002.smil  dtb_0004.smil  dtb_0005.smil  dtb_0006.smil  dtb_0008.smil  dtb_0009.smil  dtb_0011.smil  dtb_0015.smil  dtb_0017.smil  dtb_0018.smil  dtb_0019.smil  dtb_0022.smil  dtb_0024.smil  dtb_0026.smil  dtb_0030.smil  dtb_0032.smil  dtb_0038.smil  dtb_0040.smil  dtb_0044.smil  dtb_0046.smil  dtb_0050.smil  master.smil  ncc.html
tests/settings/: Makefile.am  main.cpp  threads.cpp
tests/utils/: Makefile.am  datapath.cpp  datapath.sh  fileextension.cpp  isdir.cpp  isfile.cpp  search.cpp  search.sh  trim.cpp
